# weberpenn

./: .gitignore  AUTHORS.txt  ChangeLog.txt  README.md  README.rst  appveyor.yml  metainfo.ini  pyproject.toml  setup.cfg  setup.py  test_vtree.py  travis.yml  tree_client.py  tree_geom.py
.github/workflows/: conda-package-build.yml
conda/: environment.yml  meta.yaml
debian/: changelog  control  python-vplants.weberpenn.preinst  rules
doc/: conf.py  contents.rst  index.rst  sphinx.ini
doc/WeberPenn/: index.rst
doc/user/: index.rst  overview.txt
src/demo/: demo_weberpenn_wralea.py
src/openalea/weberpenn/: __init__.py  io.py  markov.py  mtg_client.py  test_vtree.py  tree_client.py  tree_geom.py  tree_server.py  version.py
src/openalea/weberpenn/demo/: __wralea__.py
src/openalea/weberpenn/wralea/: __wralea__.py  trunk_parameters.py
src/weberpenn/: io.py  markov.py  mtg_client.py  test_vtree.py  tree_client.py  tree_geom.py  tree_server.py
src/weberpenn/demo/: __wralea__.py
src/weberpenn/wralea/: __wralea__.py  trunk_parameters.py
test/: test_dataflow_demo.py  test_mtg.py  test_polyline.py
wralea/: WeberPenn_wralea.py  trunk_parameters.py
